tdf#165481 memory leak in Save AutoRecovery information

regression from
  commit b8720d1e1f0842d52f1830c48ef7551b1868ae6f
  Author: Luboš Luňák <l.lunak@collabora.com>
  Date:   Fri Mar 25 12:42:58 2022 +0100
  fix ScTable::GetLastChangedCol() for unallocated columns

Change-Id: I639ecc87839a9149c45583d524850db66769bfc7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187003
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
(cherry picked from commit 0668573914ccf9f8611b38289471909c4d0f7888)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187018
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>